sorted/tests/02-not-enum.stderr
error: expected enum or match expression
  --> tests/02-not-enum.rs:32:1
   |
32 | pub struct Error {
   | ^^^
